--- a/SQLiteStudio3/sqlitestudiocli/sqlitestudiocli.qrc
+++ b/SQLiteStudio3/sqlitestudiocli/sqlitestudiocli.qrc
@@ -1,29 +1,1 @@
-<RCC>
-    <qresource prefix="/msg">
-        <file>translations/sqlitestudiocli_ro_RO.qm</file>
-        <file>translations/sqlitestudiocli_de_DE.qm</file>
-
-
-        <file>translations/sqlitestudiocli_pl_PL.qm</file>
-        <file>translations/sqlitestudiocli_ru_RU.qm</file>
-        <file>translations/sqlitestudiocli_fr_FR.qm</file>
-        <file>translations/sqlitestudiocli_sk_SK.qm</file>
-        <file>translations/sqlitestudiocli_zh_CN.qm</file>
-    </qresource>
-</RCC>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<RCC/>
